data/derived/comb/progs/unify/prog3898.ml.out
Characters 254-257:
  | Average (a,b) -> "((" ^ exprToString a ^ "+" exprToString b ^ ")/20"
                                             ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
